<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quyon.wifilocation.Main2Activity">

    <EditText
        android:id="@+id/DataBaseFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/dataBaseFile"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TestDatabaseFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/testFile"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataBaseFileName" />

    <ListView
        android:id="@+id/FileNameListView"
        android:layout_width="368dp"
        android:layout_height="371dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/file1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/choseFile1"
        app:layout_constraintStart_toEndOf="@+id/DataBaseFileName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/file2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/choseFile2"
        app:layout_constraintStart_toEndOf="@+id/TestDatabaseFileName"
        app:layout_constraintTop_toBottomOf="@+id/file1Button" />

    <Button
        android:id="@+id/scanFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/scanFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestDatabaseFileName" />

    <Button
        android:id="@+id/getNumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/getNum"
        app:layout_constraintStart_toEndOf="@+id/scanFileButton"
        app:layout_constraintTop_toBottomOf="@+id/TestDatabaseFileName" />
</android.support.constraint.ConstraintLayout>
